# transformers.js-chrome

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/expo/: app.config.ts  components.json  package.json
apps/expo/src/: styles.css
apps/nextjs/: next.config.js  package.json
apps/plasmo/: package.json  tailwind.config.js
apps/plasmo/components/: AudioRecorder.tsx  CapabilityIcons.tsx  ChangeModelForm.tsx  Chat.tsx  ChatDownloadButton.tsx  ChatHeader.tsx  ChatProgress.tsx  ModelRegistryForm.tsx
apps/plasmo/genai/: default-config.ts  model-registry.ts  whisper-text-streamer.ts
apps/plasmo/lib/: AudioUtils.ts
apps/plasmo/postbuild/: sed.js
apps/plasmo/postinstall/: run.sh
apps/plasmo/scripts/: convert-safari.sh
apps/plasmo/src/: background.ts  browser-compat.d.ts  types.ts
apps/plasmo/test/: background.mjs  inference.mjs  safari.mjs
apps/tauri/: README.md  index.html  package.json
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: lib.rs  main.rs
components/: ChangeModelForm.tsx  Chat.tsx  ChatExamples.tsx  ChatHeader.tsx  ChatMessages.tsx  GenerationConfigForm.tsx
docs/: TINYWHALE_CHROME_EXTENSION.md
genai/: default-config.ts  model-list.ts  model-registry.ts  stopping-criteria.ts
genai/pipeline/: multimodal-llm.ts  speech-to-text.ts  text-generation.ts  text-to-speech.ts
lib/: BlobFix.ts
postbuild/: sed.js
postinstall/: run.sh
src/: background.ts  sidepanel.tsx  types.ts
tooling/tailwind/: theme.css
(+38 files in other folders)
