[package]
name = "tinywhale-tauri"
version = "0.1.0"
description = "TinyWhale desktop app"
authors = ["Taekmin Kim", "OpenAI Codex"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tinywhale_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
encoding_rs = "0.8.35"
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq"] }
llama-cpp-2 = { version = "0.1.138", default-features = false }
once_cell = "1.21.3"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
